update made to index

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
       <img src="selfie copy.jpg" alt="Taber Haislip" height="200px" width="200px">
 
-      <p>Atlanta native, Musician, Artist, Motorbike Enthusiest, Coder. <a href="http://www.lipsum.com/">www.lipsum.com</a></p>
+      <p>Atlanta native, Musician, Artist, Motorbike Enthusiest, Coder.</p>
     </section>
 
     <section>
